--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -26,6 +25,7 @@ header {
 header h1 {
   font-size: 1.8rem;
   background: linear-gradient(to right, #ffffff, #aaaaaa);
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: bold;
@@ -55,7 +55,8 @@ nav a:hover {
 .hero h2 {
   font-size: 2.5rem;
   margin-bottom: 1rem;
-  background: linear-gradient(to right, #ffffff, #aaaaaa);
+  background: linear-gradient(to right, #ffffff, hsl(0, 0%, 67%));
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   transition: 0.3s ease;
